--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -22,8 +22,8 @@
   "alreadyHaveAccount": "Already have an account?",
   "noAccountYet": "Don't have an account yet?",
   "language": "Language",
-  "disconnect_account":"Disconnect Account",
-  "account_selected_success":"Account Selected Success",
+  "disconnect_account": "Disconnect Account",
+  "account_selected_success": "Account Selected Success",
   "contactSupport": "Contact Support",
   "linked_accounts": "Linked Accounts",
   "dashboard": "Dashboard",
@@ -258,7 +258,7 @@
   "added_successfully": "Added successfully!",
 
   "no_account_selected": "No account selected",
-  "choose_account":"Choose Account",
+  "choose_account": "Choose Account",
 
   "failed_to_load_data": "Failed to load some data from the server",
   "select_whatsapp_account_first": "Please select a WhatsApp account first",
@@ -507,5 +507,9 @@
   "saving_template": "Saving template...",
   "updating_template": "Updating template...",
   "deleting_template": "Deleting template...",
-  "deleting_person": "Deleting person..."
+  "deleting_person": "Deleting person...",
+
+  "adding_auto_reply": "Adding auto reply...",
+  "editing_auto_reply": "Editing auto reply...",
+  "deleting_auto_reply": "Deleting auto reply..."
 }
