--- a/public/locales/ar.json
+++ b/public/locales/ar.json
@@ -517,5 +517,7 @@
   "keyword": "الكلمة المفتاحية",
   "response": "الرد",
   "edit": "تعديل",
-  "delete": "حذف"
+  "delete": "حذف",
+
+  "deleting_account": "جارٍ حذف الحساب، يرجى الانتظار..."
 }
