--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -516,5 +516,7 @@
   "keyword": "Keyword",
   "response": "Response",
   "edit": "Edit",
-  "delete": "Delete"
+  "delete": "Delete",
+
+  "deleting_account": "Deleting account, please wait..."
 }
